tests/fixtures/invalid/min_int_set.py
# Cannot call min() with Int, Set[int]
x = min(1, {1, 2, 3})
